# laune

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  package.json  setup-precommit.sh  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile  clippy.toml
backend/config/: default.json
backend/examples/: feed_management_api.rs  test_aggregated_summary.rs
backend/migrations/: 20240602000000_create_tables.sql  20240602000001_add_performance_indexes.sql  20240602000002_add_feed_active_column.sql
backend/src/: config.rs  db.rs  error.rs  feeds.rs  main.rs  models.rs  routes.rs  summarizer.rs
backend/src/routes/: articles.rs  feeds.rs  summaries.rs  summaries_test.rs
docs/: PRE_COMMIT.md
frontend/: .eslintrc.json  .gitignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/pages/: ArticlePage.tsx  BulkFetchPage.tsx  FeedPage.tsx  FeedsPage.tsx  HomePage.tsx  NotFoundPage.tsx
frontend/src/types/: index.ts
shared/: types.ts
