[package]
name = "laune-backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Backend server for Laune feed reader"

[dependencies]
# Web framework
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tower = "0.4.13"

# Database
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid"] }

# Feed parsing
feed-rs = "1.3.0"
reqwest = { version = "0.11.22", features = ["json"] }

# AI integration
async-openai = "0.14.3"

# Serialization & Validation
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
validator = { version = "0.16.1", features = ["derive"] }

# Logging & Configuration
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenv = "0.15.0"
config = "0.13.3"

# Utils
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
thiserror = "1.0.50"
anyhow = "1.0.75"

[dev-dependencies]
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"
wiremock = "0.5.21"
